Beginning RNAseq analysis

--- a/andtcr/rna/unsupervised/pca.ipynb
+++ b/andtcr/rna/unsupervised/pca.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:6f444b493c676bdfb1b76bd3b0e478ace07edcec1ca6d458e5bee4d9e051bd16"
+  "signature": "sha256:68b8d3fa19b59ffb4a20f7f9ac7912e81b3edb5d710578deabba397b761596af"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -367,8 +367,12 @@
      "collapsed": false,
      "input": [
       "# We want to get the top and bottom features that make up each component.\n",
+      "out_data = data[:]\n",
+      "out_data['gene_name'] = [s.split('|')[0] for s in data['Annotation/Divergence']]\n",
+      "\n",
       "components = pd.DataFrame(pca.components_)\n",
       "pcs = []\n",
+      "\n",
       "for x in range(0,2):\n",
       "    pc = components.loc[x]\n",
       "    pc.sort()\n",
@@ -378,17 +382,44 @@
       "    \n",
       "    bottom_ids = filtered.index[bottom]\n",
       "    top_ids = filtered.index[top]\n",
-      "    data['gene_name'] = [s.split('|')[0] for s in data['Annotation/Divergence']]\n",
-      "    data.loc[bottom_ids].to_csv('output/clusters/pca_pc{}_bottom_rna_and.txt'.format(x + 1), \n",
+      "    out_data.loc[bottom_ids].to_csv('output/clusters/pca_pc{}_bottom_rna_and.txt'.format(x + 1), \n",
       "                        sep='\\t', header=True, index=False)\n",
-      "    data.loc[top_ids].to_csv('output/clusters/pca_pc{}_top_rna_and.txt'.format(x + 1), \n",
+      "    out_data.loc[top_ids].to_csv('output/clusters/pca_pc{}_top_rna_and.txt'.format(x + 1), \n",
       "                        sep='\\t', header=True, index=False)\n",
       "    pcs.append([filtered.loc[bottom_ids], filtered.loc[top_ids]])"
      ],
      "language": "python",
      "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stderr",
+       "text": [
+        "-c:3: SettingWithCopyWarning: \n",
+        "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+        "Try using .loc[row_indexer,col_indexer] = value instead\n",
+        "\n",
+        "See the the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n"
+       ]
+      }
+     ],
+     "prompt_number": 60
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "# Output all, sorted, with the PC index.\n",
+      "pc_data = out_data.loc[filtered.index]\n",
+      "pc_data['pc1'] = components.loc[0].tolist()\n",
+      "pc_data['pc2'] = components.loc[1].tolist()\n",
+      "pc_data.to_csv('output/clusters/pca_genes_rna_and.txt', \n",
+      "                        sep='\\t', header=True, index=False)"
+     ],
+     "language": "python",
+     "metadata": {},
      "outputs": [],
-     "prompt_number": 34
+     "prompt_number": 74
     },
     {
      "cell_type": "code",
