AP-1 enrichment with regard to RNAseq

--- a/andtcr/rna/genes/ap1_per_gene.ipynb
+++ b/andtcr/rna/genes/ap1_per_gene.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:e1a4e43bd067c63726ec7f2c3785f56947217fe59d7938388cdaef27ab9e8ac4"
+  "signature": "sha256:f2c4735e19c07d656f475093fa4f9bb46b2804d0e660ae7efd263bb69f784d12"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -102,14 +102,14 @@
       "ON reg.chromosome_id = chrom.id\n",
       "LEFT OUTER JOIN chipseq.peak_cd4tcell_th17_{peak} peak\n",
       "ON reg.chromosome_id = peak.chromosome_id\n",
-      "AND reg.start_end_1000 && peak.start_end\n",
+      "AND reg.start_site_1000 && peak.start_end\n",
       "\n",
       "'''"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 4
+     "prompt_number": 11
     },
     {
      "cell_type": "code",
@@ -124,7 +124,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 5
+     "prompt_number": 12
     },
     {
      "cell_type": "code",
@@ -172,7 +172,7 @@
         "    </tr>\n",
         "    <tr>\n",
         "      <th>1</th>\n",
-        "      <td> 15.3</td>\n",
+        "      <td>  0.0</td>\n",
         "      <td>  chr2</td>\n",
         "      <td> 0</td>\n",
         "      <td> 0</td>\n",
@@ -198,7 +198,7 @@
         "    </tr>\n",
         "    <tr>\n",
         "      <th>3</th>\n",
-        "      <td> 11.5</td>\n",
+        "      <td>  0.0</td>\n",
         "      <td> chr13</td>\n",
         "      <td> 0</td>\n",
         "      <td> 0</td>\n",
@@ -228,13 +228,13 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 6,
+       "prompt_number": 13,
        "text": [
         "   batf_tag_count chr_name  cjun_tag_count  irf4_tag_count  junb_tag_count  \\\n",
         "0            17.2     chrX               0               0               0   \n",
-        "1            15.3     chr2               0               0               0   \n",
+        "1             0.0     chr2               0               0               0   \n",
         "2             0.0     chr6               0               0               0   \n",
-        "3            11.5    chr13               0               0               0   \n",
+        "3             0.0    chr13               0               0               0   \n",
         "4            39.6     chr9               0               0               0   \n",
         "\n",
         "   jund_tag_count sequence_identifier  strand  transcription_end  \\\n",
@@ -253,7 +253,7 @@
        ]
       }
      ],
-     "prompt_number": 6
+     "prompt_number": 13
     },
     {
      "cell_type": "code",
@@ -322,7 +322,7 @@
         "      <th>0</th>\n",
         "      <td> 26.84</td>\n",
         "      <td> 14.30</td>\n",
-        "      <td> 35.70</td>\n",
+        "      <td> 24.40</td>\n",
         "      <td> 27.6</td>\n",
         "      <td> 63.5</td>\n",
         "    </tr>\n",
@@ -348,7 +348,7 @@
         "      <td>  0.00</td>\n",
         "      <td>  0.00</td>\n",
         "      <td>  0.0</td>\n",
-        "      <td>  7.8</td>\n",
+        "      <td>  0.0</td>\n",
         "    </tr>\n",
         "    <tr>\n",
         "      <th>NM_001001176</th>\n",
@@ -368,7 +368,7 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 8,
+       "prompt_number": 14,
        "text": [
         "                                                                           batf_tag_count  \\\n",
         "sequence_identifier chr_name transcription_start transcription_end strand                   \n",
@@ -389,7 +389,7 @@
         "                                                                           irf4_tag_count  \\\n",
         "sequence_identifier chr_name transcription_start transcription_end strand                   \n",
         "NM_001001130        chr13    67747799            67755134          1                33.60   \n",
-        "NM_001001144        chr9     110333355           110384949         0                35.70   \n",
+        "NM_001001144        chr9     110333355           110384949         0                24.40   \n",
         "NM_001001152        chr13    67254917            67269068          1                 6.69   \n",
         "NM_001001160        chr6     85469575            85502994          1                 0.00   \n",
         "NM_001001176        chrX     106206873           106219842         1                10.40   \n",
@@ -407,12 +407,12 @@
         "NM_001001130        chr13    67747799            67755134          1                 16.1  \n",
         "NM_001001144        chr9     110333355           110384949         0                 63.5  \n",
         "NM_001001152        chr13    67254917            67269068          1                 40.6  \n",
-        "NM_001001160        chr6     85469575            85502994          1                  7.8  \n",
+        "NM_001001160        chr6     85469575            85502994          1                  0.0  \n",
         "NM_001001176        chrX     106206873           106219842         1                 29.1  "
        ]
       }
      ],
-     "prompt_number": 8
+     "prompt_number": 14
     },
     {
      "cell_type": "code",
@@ -424,7 +424,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 10
+     "prompt_number": 15
     },
     {
      "cell_type": "code",
