--- a/andtcr/rna/batfko/plot_gse54215.ipynb
+++ b/andtcr/rna/batfko/plot_gse54215.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:a5d7127d9ee9b022a4e2daa55ccbb995a80963fc6cd8adc2a84e8116ac64719e"
+  "signature": "sha256:c8fcb2bde148607f54684261caac2e0163812b3be44aae31d494f33585be0a55"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -28,13 +28,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 1,
+       "prompt_number": 63,
        "text": [
-        "'\\nGSE54215: Microarray of Batf KO CD8s.\\nIs PC1 preferentially downregulated?\\n'"
+        "'\\nGSE54215: Microarray of Batf KO CD8s.\\nIs PC1 preferentially downregulated?\\n\\nPost-script: preferentially upregulated instead. This is in line\\nwith what the authors said in the paper (Ifng, other effectors are up),\\nwhere it was attributed to dysregulation of a network of transcription\\nfactors. Hmm. That makes things more complicated.\\n'"
        ]
       }
      ],
-     "prompt_number": 1
+     "prompt_number": 63
     },
     {
      "cell_type": "code",
