Second replicate is in.

--- a/andtcr/rna/unsupervised/get_mean_for_reps.ipynb
+++ b/andtcr/rna/unsupervised/get_mean_for_reps.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:0beccd2fa9194e5d78970431a2f6f7482937297df15cfd059593fe2eb8bcf547"
+  "signature": "sha256:80977c2e46c8a566d6adc940ba22424c55c434fa17afafafc26ac43033e6d7f5"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -55,6 +55,7 @@
       "    cleaned = col.replace('-KAA-15-01-22 reads','-1').replace(' FPKM','')\n",
       "    cleaned = cleaned.replace('-KAA-15-02-17 reads','-2').replace('../../rep1/tag-dirs/','')\n",
       "    cleaned = cleaned.replace('AND-CD4TCell-RNA-','').replace('../../rep2/tag-dirs/','')\n",
+      "    cleaned = cleaned.replace('0-5uM-MEKi-2','MEKi')\n",
       "    new_index.append(cleaned)\n",
       "new_index[0] = 'id'\n",
       "data.columns = new_index\n",
@@ -184,7 +185,7 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 20,
+       "prompt_number": 33,
        "text": [
         "           No-Peptide-24h-1  10uM-K99A-24h-1  100uM-K99A-24h-1  \\\n",
         "id                                                               \n",
@@ -212,7 +213,7 @@
        ]
       }
      ],
-     "prompt_number": 20
+     "prompt_number": 33
     },
     {
      "cell_type": "code",
@@ -220,12 +221,13 @@
      "input": [
       "for col in cols:\n",
       "    replicates = subdata.filter(like=col)\n",
-      "    data[col] = replicates.mean(axis=1)"
+      "    data[col] = replicates.mean(axis=1)\n",
+      "    data[col + '-std'] = replicates.std(axis=1)"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 21
+     "prompt_number": 34
     },
     {
      "cell_type": "code",
@@ -237,7 +239,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 22
+     "prompt_number": 35
     },
     {
      "cell_type": "code",
