Figure and directory cleanup

--- a/andtcr/superenhancers/no_peptide_1um_pcc_comparison.ipynb
+++ b/andtcr/superenhancers/no_peptide_1um_pcc_comparison.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:2a5387004980d10667013d84919a2f4f1c19c9cb81b3c1bb8359edc1b23b8bd8"
+  "signature": "sha256:6f31ac1841e7968e34ca5ed07d7264aa9b6e1669d0d1945cdf7f8421cb1c7cea"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -1014,6 +1014,42 @@
       }
      ],
      "prompt_number": 26
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "# Output for figures.\n",
+      "genes = ['Batf','Ctla4','Ets1','Il2ra','Irf4','Lag3','Runx1','Sell','Stat5b','Tbx21']\n",
+      "figure_data = data[data['Gene Name'].isin(genes)]\n",
+      "figure_data.to_csv('output/superenhancer_coords_for_browser_figures.txt',\n",
+      "                   sep='\\t', header=True, index=False,\n",
+      "                   columns=['Gene Name', 'chr', 'start', 'end'])"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 28
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "len(figure_data), len(genes)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 29,
+       "text": [
+        "(10, 10)"
+       ]
+      }
+     ],
+     "prompt_number": 29
     },
     {
      "cell_type": "code",
