--- a/andtcr/rna/activationscore/examples/plot_GSE54938.ipynb
+++ b/andtcr/rna/activationscore/examples/plot_GSE54938.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:c73c5925f7e1c6b94c8db6c1094597a66e28ac46c461cd14ec9adb434dd520f5"
+  "signature": "sha256:3bb86ae9d67de0c866c56a3dc81220b1cfab40ffc9c21c12d825e352e1f773c6"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -1358,31 +1358,23 @@
      "collapsed": false,
      "input": [
       "# Irregular numbers of samples-- calc means and std.\n",
-      "means = [scores[0],\n",
-      "         np.mean(scores[1:3]),\n",
-      "         np.mean(scores[3:5]),\n",
+      "groups = [scores[0],\n",
+      "         scores[1:3],\n",
+      "         scores[3:5],\n",
       "         scores[5],\n",
-      "         np.mean(scores[6:8]),\n",
-      "         np.mean(scores[8:10]),\n",
+      "         scores[6:8],\n",
+      "         scores[8:10],\n",
       "         scores[10],\n",
-      "         np.mean(scores[11:13]),\n",
-      "         np.mean(scores[13:15]),\n",
+      "         scores[11:13],\n",
+      "         scores[13:15],\n",
       "         ]\n",
-      "stddev = [0,\n",
-      "         np.std(scores[1:3]),\n",
-      "         np.std(scores[3:5]),\n",
-      "         0,\n",
-      "         np.std(scores[6:8]),\n",
-      "         np.std(scores[8:10]),\n",
-      "         0,\n",
-      "         np.std(scores[11:13]),\n",
-      "         np.std(scores[13:15]),\n",
-      "         ]"
+      "means = [np.mean(g) for g in groups]\n",
+      "stddev = [np.std(g) for g in groups]"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 11
+     "prompt_number": 15
     },
     {
      "cell_type": "code",
@@ -1401,7 +1393,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 12
+     "prompt_number": 16
     },
     {
      "cell_type": "code",
@@ -1472,11 +1464,30 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "# Calculate p-vals for sets of interest.\n",
+      "from scipy.stats import ttest_ind\n",
+      "\n",
+      "pairs = [(x+1, x+2) for x in range(0, len(groups)-1, 3)]\n",
+      "\n",
+      "for x, y in pairs:\n",
+      "    t, p = ttest_ind(groups[x], groups[y])\n",
+      "    print(labels[int(y//3)] + ' APC + Ag', 'v', labels[int(y//3)] + ' aCD3 + aCD28', '\\t', p)"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 56
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Th1 APC + Ag v Th1 aCD3 + aCD28 \t 0.0610571959772\n",
+        "Th9 APC + Ag v Th9 aCD3 + aCD28 \t 0.0272531052191\n",
+        "Th17 APC + Ag v Th17 aCD3 + aCD28 \t 0.0317491121346\n"
+       ]
+      }
+     ],
+     "prompt_number": 20
     },
     {
      "cell_type": "code",
